--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ashallendesign/short-url": "^7.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.24",
         "laravel/framework": "^10.10",
@@ -19,6 +20,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
+        "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
